--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,12 @@
+
 language: python
 python:
   - "3.6"
   - "3.6-dev"  # 3.6 development branch
-# command to install dependencies
 cache: pip
+# command to install dependencies
 install:
   - pip install -r requirements.txt
-  pip install -r requirements.txt
 # command to run tests
 script:
-  python test_calc.py
+  - python test_calc.py
