--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ python:
 cache: pip
 # command to install dependencies
 install:
-  pip install -r requirements.txt
+  - pip install -r requirements.txt
 # command to run tests
 script:
-  python test_calc.py
+  - python test_calc.py
