--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ python:
 cache: pip
 # command to install dependencies
 install:
+  - pip install -r requirements.txt
   pip install -r requirements.txt
 # command to run tests
 script:
